--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "pablohen",
+  "license": "MIT",
   "dependencies": {
     "puppeteer": "^8.0.0",
     "readline-sync": "^1.4.10"
